--- a/Content/css/mvc.boilerplate/sprites.less
+++ b/Content/css/mvc.boilerplate/sprites.less
@@ -10,6 +10,11 @@
 
 	}
 
+	[class^="icon-"]:before,
+	[class*=" icon-"]:before {
+		content : "" !important;
+	}
+
 	.icon-glass              { background-position: 0      0; }
 	.icon-music              { background-position: -16px  0; }
 	.icon-search             { background-position: -32px  0; }
