--- a/Views/DeveloperGuide/_Icons.cshtml
+++ b/Views/DeveloperGuide/_Icons.cshtml
@@ -6,7 +6,8 @@
     </div>
 
     <h2>Glyphicons</h2>
-    <p>140 icons in sprite form, available in dark gray (default) and white, provided by <a href="http://glyphicons.com" target="_blank">Glyphicons</a>.</p>
+    <p style="text-decoration:line-through">140 icons in sprite form, available in dark gray (default) and white, provided by <a href="http://glyphicons.com" target="_blank">Glyphicons</a>.</p>
+    <p>Boilerplate uses the <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a> plugin pack for Bootstrap.  Below are the standard bootstrap icons, for a full list of Font Awesome icons (ie. loads more) visit the github Font Awesome wiki.</p>
     <ul class="the-icons clearfix">
     <li><i class="icon-glass"></i> icon-glass</li>
     <li><i class="icon-music"></i> icon-music</li>
