--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,35 +8,36 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>@ViewBag.Title</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/css/html5.boilerplate.normalize.css")">
-        <link rel="stylesheet" type="text/css"  href="@Url.Content("~/Content/css/html5.boilerplate.main.css")">
-        <link rel="stylesheet" type="text/css"  href="@Url.Content("~/Content/css/telerik.common.min.css")">
         <link rel="stylesheet" type="text/css"  href="@Url.Content("~/Content/css/kendo.common.min.css")">
         <link rel="stylesheet" type="text/css"  href="@Url.Content("~/Content/css/kendo.default.min.css")">
-        <link rel="stylesheet" type="text/css"  href="@Url.Content("~/Content/css/prettify.css")">
         <link rel="stylesheet" type="text/css"  href="@Url.Content("~/Content/css/slick.grid.css")">
         
         <link rel="stylesheet" type="text/css"  href="@Url.Content("~/Content/css/jquery.multiselect.css")">
         <link rel="stylesheet" type="text/css"  href="@Url.Content("~/Content/css/jquery.multiselect.filter.css")">
 
         <link rel="stylesheet/less" type="text/css" href="@Url.Content("~/Content/css/mvc.boilerplate/mvc.boilerplate.less")">
+        <link rel="stylesheet" type="text/css"  href="@Url.Content("~/Content/css/site.css")">
+
+        @RenderSection("ViewStyles", required: false)
 
         <script src="@Url.Content("~/Content/scripts/lib/modernizr-2.6.1.min.js")"></script>
+        
         <script src="@Url.Content("~/Content/scripts/lib/less-1.3.0.min.js")"></script>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script> window.jQuery || document.write('<script src="@Url.Content("~/Content/scripts/lib/jquery-1.8.0.min.js")"><\/script>')</script>
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
         <script> (jQuery.ui) || document.write('<script src="@Url.Content("~/Content/scripts/lib/jquery-ui-1.9.1.min.js")"><\/script>')</script>
+
         <script src="@Url.Content("~/Content/scripts/lib/kendo.web.min.js")"></script>
         <script src="@Url.Content("~/Content/scripts/lib/prettify.js")"></script>
         <script src="@Url.Content("~/Content/scripts/lib/jquery.event.drag-2.0.min.js")"></script>
         <script src="@Url.Content("~/Content/scripts/lib/slick.core.js")"></script>
         <script src="@Url.Content("~/Content/scripts/lib/slick.grid.js")"></script>
-        
+
         <script src="@Url.Content("~/Content/scripts/lib/jquery.multiselect.js")"></script>
         <script src="@Url.Content("~/Content/scripts/lib/jquery.multiselect.filter.js")"></script>
 
@@ -44,25 +45,57 @@
 
         <script src="@Url.Content("~/Content/scripts/lib/html.encode.decode.js")"></script>
         <script src="@Url.Content("~/Content/scripts/lib/mvc-boilerplate.utility.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/lib/knockout-2.2.1.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/lib/d3.v3.min.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/lib/farseer.knockout.extensions.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/lib/farseer.d3.js")"></script>
+        
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-transition.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-alert.js")"></script> 
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-modal.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-dropdown.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-scrollspy.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-tab.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-tooltip.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-popover.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-button.js")"></script> 
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-collapse.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-carousel.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-typeahead.js")"></script>
+        <script src="@Url.Content("~/Content/scripts/bootstrap/bootstrap-affix.js")"></script> 
+
+        <script src="@Url.Content("~/Content/scripts/boilerplate/slickgrid-initialiser.js")"></script>
+        
+        <script src="@Url.Content("~/Content/scripts/boilerplate-devguide/application.js")"></script>
+
+        @RenderSection("ViewScripts", required:false)
+        
+        
     </head>
-    <body>
+    <body class="style-guide" data-spy="scroll" data-target=".side-navigation" data-twttr-rendered="true">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
 
+        @Html.Partial("_Navbar")
+        @Html.Partial("_Header")
+
         <!-- Add your site or application content here -->
-        <div class="content">
-        @RenderBody()
+        <div class="container">
+            <div class="row">
+                <div class="@Html.AttributeEncode((IsSectionDefined("SideNavigation")) ? "span3 side-navigation" : "ui-helper-hidden")">
+                    @RenderSection("SideNavigation", false)
+                </div>
+
+                <div class="@Html.AttributeEncode((IsSectionDefined("SideNavigation")) ? "span9 " : "span12 ")content-panel">
+                    @RenderBody()
+                </div>
+            </div>
         </div>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
-            (function (d, t) {
-                var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-                g.src = ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js';
-                s.parentNode.insertBefore(g, s)
-            } (document, 'script'));
-        </script>
+        @if (ViewBag.UseGoogleAnalytics != null && ViewBag.UseGoogleAnalytics)
+        {
+            @Html.Partial("Layout/_GoogleAnalytics")
+        }
     </body>
 </html>
